--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
             <version>2.23.4</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-slf4j-impl</artifactId>
+		    <version>2.19.0</version>
+		    <scope>test</scope>
+		</dependency>
+
     </dependencies>
 
     <build>
