--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,15 @@
 		    <version>2.19.0</version>
 		    <scope>test</scope>
 		</dependency>
+		
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20220924</version>
+</dependency>
+
+		
 
     </dependencies>
 
